# nil-cmake

./: CMakeLists.txt  config.cmake.in
cmake/: cpack.cmake  pypi.cmake
configure/: gcc
